assets/css/login.css
/* ========== Base ========== */
*,
::before,
::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: #FAFAFA;
    font-family: "Yekan Bakh", Tahoma, sanserif;
}

/* ========== Layout ========== */
.main-container {
    display: flex;
    flex-direction: column;
    width: 100vw;
    min-height: 100vh;
    justify-content: center;
    align-items: center;
}

/* ========== Form ========== */
.form-container {
    width: 532px;
    /* height: 732px; */
    padding: 47px 60px 0;
    background-color: #FFFFFF;
    text-align: center;
    border-radius: 24px;
    background-image: url("../images/login_background.svg");
    background-repeat: no-repeat;
    background-position-x: center;
    overflow: hidden;
    /* position: relative; */
}

.reverse-content {
    display: flex;
    flex-direction: column-reverse;
}

.form-title {
    margin: 0;
    height: 52px;
    font-size: 32px;
    line-height: 52px;
    font-weight: bold;
    color: #464646;
}

.form-img {
    width: 412px;
    height: 309px;
}

.form-fields {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.form-fields input[type="email"],
.form-fields input[type="password"] {
    border-style: none;
    direction: ltr;
    text-align: right;
}

.form-fields input[type="email"]:focus,
.form-fields input[type="password"]:focus {
    border-style: none;
    outline: none;
}

.form-fields input[type="submit"] {
    border-radius: 20px;
    margin-bottom: 16px;
    background-color: #2471EB;
    color: #F4F7FC;
    border-style: none;
    font-weight: 600;
    cursor: pointer;
    width: 312px;
    height: 56px;
}

.inputs-container {
    background: linear-gradient(rgba(255, 255, 255, .66), rgba(255, 255, 255, 1));
    padding-bottom: 40px;
    padding-top: 10px;
}

.register-link {
    text-decoration: none;
    font-weight: 600;
    color: #464646;
    padding-right: 12px;
}

.register-link:hover {
    text-decoration: underline;
}

.form-container p {
    color: #5A5A5A;
    line-height: 32px;
    font-size: 16px;
}

.input-container {
    display: flex;
    flex-direction: row;
    border-radius: 16px;
    border: 1px solid #BEC1CA;
    margin-bottom: 28px;
    align-items: center;
    overflow: hidden;
    width: 312px;
    height: 56px;
    justify-content: right;
    padding: 8px;
}

.input-container img {
    margin: 4px 0 4px 8px;
}

/* .input-container .hidden-password {
    cursor: pointer;
    margin: 4px 8px 4px 0;
} */

.input-container div {
    display: flex;
    flex-direction: column;
    position: relative;
    text-align: right;
    padding: 4px 0;
    width: 100%;
    height: 40px;
    justify-content: center;
}

.input-container input {
    position: absolute;
    bottom: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0);
    height: 100%;
    width: 100%;
}

.input-container input:focus~label {
    position: absolute;
    top: 0;
    right: 0;
    line-height: 16px;
    font-size: 14px;
    color: #5A5A5A;
}

